<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.bmicalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textColor="@color/blue"
        android:id="@+id/textView2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/gender">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/male"
            android:text="@string/m"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:ems="7"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:text="@string/f"
            android:textSize="23dp"
            android:textColor="@color/black"

            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textColor="@color/blue"
        android:layout_alignBottom="@+id/ht"
        android:id="@+id/textView"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unit"
        android:orientation="horizontal">

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kg"
            android:textSize="23dp"
            android:text="@string/kg"
            android:textColor="@color/black"
        android:ems="7"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lb"
        android:textSize="23dp"
        android:text="@string/lb"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/bmi"
        android:layout_toEndOf="@+id/bmi"
        />
    </RadioGroup>

    <EditText
        android:id="@+id/wt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/h1"
        android:textColor="@color/black"
        android:layout_marginTop="15dp" />
    <!--</android.support.design.widget.TextInputLayout>-->
    <EditText
        android:id="@+id/ht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/h2"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
         />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/blue"
        android:textSize="25dp"
        />
    <TextView
        android:id="@+id/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:visibility="gone"
        android:textColor="@color/blue"
        android:textSize="25dp"
        />
    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:visibility="gone"
        android:textColor="@color/blue"
        android:textSize="25dp"
        />


</LinearLayout>
